# tinygpt_train_demo

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  generate.py  grpo.py  grpo_config.py  pyproject.toml  requirements.txt  sft.py  sft_config.py  train.py
data/: grpo_prompts.json  sft_data.json
src/: dataset.py  generate.py  grpo_trainer.py  model.py  reward.py  sft_dataset.py  sft_trainer.py  tokenizer.py  trainer.py
