[project]
name = "tinygpt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch==2.11.0",
    "numpy==2.4.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
